new proj/src/objects/GE_HQ_Forecasted_SAS__c.object
<CustomObject>
    <description>Stores all the SAS information related to an Account Plan</description>
    <fields>
        <fullName>GE_HQ_Account_Plan__c</fullName>
        <label>Account Plan</label>
        <referenceTo>GE_HQ_Account_Plan__c</referenceTo>
        <relationshipName>SAS</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier1__c</fullName>
        <label>Tier 2 P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Buss_Tier__c</controllingField>
            <picklistValues>
                <fullName>PII Pipeline Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measurement &amp; Control (M&amp;C)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drilling &amp; Surface (D&amp;S)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsea (SS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DTS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lufkin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Buss_Tier__c</fullName>
        <label>Tier 1 P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>Oil &amp; Gas (O&amp;G)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_External_ID_Fm__c</fullName>
        <formula>GE_HQ_Account_Plan__c +&apos;-&apos;+ TEXT(GE_HQ_Buss_Tier__c) +&apos;-&apos;+ TEXT(GE_HQ_Buss_Tier1__c) +&apos;-&apos;+ TEXT(GE_HQ_Year__c)</formula>
        <label>External ID Fm</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_HQ_External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_Orders__c</fullName>
        <label>Orders</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Penetration__c</fullName>
        <formula>IF(AND(GE_HQ_Orders__c&lt;&gt;null,GE_HQ_SAS_Value__c&lt;&gt;null),(GE_HQ_Orders__c /  GE_HQ_SAS_Value__c) * 100,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Penetration%</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SAS_Value__c</fullName>
        <label>SAS Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_SFDC_LEGACY_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>GE_HQ_TAM_Value__c</fullName>
        <label>TAM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Tier1_PL__c</fullName>
        <label>Tier1 - P&amp;L</label>
        <picklist>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>O&amp;G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;W</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Tier2_PL__c</fullName>
        <label>Tier2 - P&amp;L</label>
        <picklist>
            <controllingField>GE_HQ_Tier1_PL__c</controllingField>
            <picklistValues>
                <fullName>Aero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D&amp;PS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dresser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Env</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gasification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jenbacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nuclear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thermal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Water IWS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wind Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_HQ_Year__c</fullName>
        <label>Year</label>
        <picklist>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>IAP Financial</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>SAS Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IAP Financials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>